--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 .headtext2 {
+  color: rgb(79, 79, 79);
   font-size: 12px;
   margin-top: 5px;
   font-family: tahoma;
@@ -51,7 +52,7 @@ li a:hover:not(.active) {
   display: flex;
   margin-left: 5%;
   animation: greenchange;
-  animation-duration: 5s;
+  animation-duration: 2s;
   background-color: rgba(78, 195, 100, 0.9);
 }
 
@@ -64,13 +65,11 @@ li a:hover:not(.active) {
   }
 }
 .container {
-  margin-top: 20px;
-  margin-left: 5%;
-  margin-right: 1%;
   width: 30%;
-  margin-bottom: 20px;
 
-  border-radius: 20px;
   padding-bottom: 60px;
   padding-left: 30px;
+}
+.container:hover {
+  background-color: rgb(46, 237, 173);
 }
